# wolf3d

./: CMakeLists.txt  main.c  map  mapa,wolf  mapa.wolf  w_drawcalc.c  w_error.c  w_events.c  w_hooks.c  w_initial.c  w_printmap.c  w_readmap.c  w_sides.c  w_validation.c  wolf3d.h
libft/: ft_memchr.c  get_next_line.c  libft.h
